force-app/main/default/objects/Meeting__c/fields/Follow_up_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Meeting__c</fullName>
    <label>Follow-up Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>