force-app/main/default/objects/Meeting__c/fields/Follow_up_meeting_Start_date__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_meeting_Start_date__c</fullName>
    <label>Follow up meeting Start date</label>
    <type>Date</type>
</CustomField>