force-app/main/default/objects/Meeting__c/fields/Meeting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Notes__c</fullName>
    <label>Meeting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>