force-app/main/default/objects/Meeting__c/fields/Meeting_Status__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Status__c</fullName>
    <label>Meeting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Re-Scheduled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>