force-app/main/default/objects/Meeting__c/fields/Name_of_the_person__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_person__c</fullName>
    <label>Name of the person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>