force-app/main/default/objects/Meeting__c/fields/Name_of_the_person_completing_the_report__c.field-meta.xml
<CustomField>
    <fullName>Name_of_the_person_completing_the_report__c</fullName>
    <label>Name of the person completing the report</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Facilitator</fullName>
            </value>
            <value>
                <fullName>Case worker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>