force-app/main/default/objects/Meeting__c/fields/Participants__c.field-meta.xml
<CustomField>
    <fullName>Participants__c</fullName>
    <label>Participants</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>