force-app/main/default/objects/Meeting__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Planning FIM</fullName>
            </value>
            <value>
                <fullName>Change in Permanency Plan FIM</fullName>
            </value>
            <value>
                <fullName>Change in Placement FIM</fullName>
            </value>
            <value>
                <fullName>Considered Removal/Removal FIM</fullName>
            </value>
            <value>
                <fullName>Voluntary Placement Agreement (VPA) FIM</fullName>
            </value>
            <value>
                <fullName>Youth Transition FIM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>