force-app/main/default/objects/Meeting__c/fields/Type_of_the_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Type_of_the_Meeting__c</fullName>
    <label>Type of the Meeting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessment Meeting</fullName>
            </value>
            <value>
                <fullName>Attorney/Legal</fullName>
            </value>
            <value>
                <fullName>CASA</fullName>
            </value>
            <value>
                <fullName>FIM</fullName>
            </value>
            <value>
                <fullName>Legal/Lawyer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Multi D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>